Add toaster and workflow

--- a/frontend/src/style/style.styl
+++ b/frontend/src/style/style.styl
@@ -1,9 +1,9 @@
 .container
-  max-width: 100% !important
-  min-height: 500px
+  max-width  100% !important
+  min-height  500px
 
 .board
-  margin-top: 20px
+  margin-top  20px
 
 .board-column
   padding 2px !important
@@ -14,13 +14,13 @@
 .board-column__list
   padding 2px !important
   background-color #ededed
-  min-height: 500px
+  min-height  500px
   border-radius 4px
   &>.list-group-item
     margin 5px 2px
 
 .task-card
-  font-size: 0.75rem
+  font-size  0.75rem
   border-radius 5px
   &>.card__title
     display block
@@ -37,20 +37,20 @@
     height 25px
 
 .pointer
-  cursor: pointer
+  cursor  pointer
 
 .drag-and-drop
-  cursor: move
+  cursor  move
 
 .busted-max
-  background-color: #f18381 !important
+  background-color  #f18381 !important
 
 
 .column-in_progress .card
-  background-color: yellow
+  background-color  yellow
 
 .column-done .card
-  background-color: greenyellow
+  background-color  greenyellow
 
 
 @keyframes fadein-animation
@@ -65,10 +65,8 @@
   to
     opacity 0
 
-
 .fade-enter-active
-  animation: fadein-animation 0.5s
-
+  animation  fadein-animation 0.5s
 
 .fade-leave-active
-  animation: fadeout-animation 0.5s
+  animation  fadeout-animation 0.5s
