--- a/frontend/src/style/style.styl
+++ b/frontend/src/style/style.styl
@@ -1,6 +1,5 @@
-.container
-  max-width  100% !important
-  min-height  500px
+.app-navigation
+  border-radius 0;
 
 .board
   margin-top  20px
@@ -26,7 +25,7 @@
     display block
     font-weight bold
   &>.card__status-backlog
-    background-color gray
+    background-color graygit
   &>.card__status-done
     background-color green
   &>.card__status-in_progress
